<resources>
    <string name="app_name">CandyShop</string>
    <string name="label_splash"> © mobiletech - 2021</string>
    <string name="et_hint_email_id">Entrez votre Email</string>
    <string name="et_hint_password">Entrez votre mot de passe</string>
    <string name="et_hint_password_confirmation">Confirmez votre mot de passe</string>
    <string name="et_hint_username">Entrez votre nom</string>
    <string name="account"><u>avez vous un compte?</u></string>
    <string name="tosubscribe"> | <u>Enregistrez-vous</u></string>
    <string name="create_account"> <u>CREEZ UN COMPTE</u></string>
    <string name="welcome_to_home">Bienvenue!!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Entrez une quantitée</string>
    <string name="espaceperso"><u>Voici votre espace personnel</u></string>
    <string name="la_descrition">jkjkjdjskdjksjdksjdksdsjggdjsdjdhjshxcnjchhkcdhckdhkchdhkdhkchkdhckdhkchdkchkdhcdcguhkhcjhchihcihicheihiehiheiiehiehibcjbdjbvgftdtadgdacfshgasjhdkkdfhkdhkfhdkfhkdhfkdhfkhdkfhkdfkhdkfhkdfhkdhfhdkfhkdhfkdhfk dfhdkfkdfhk dfhdkfhdkhfkdhfkdhfkhdkfdjfjdfhdhfkdhfkhdkfhdkfhdkfdkfhdkfhdkfhkdfhkdfhkdfhkdfhdkfhdkhf  jkjkjdjskdjksjdksjdksdsjggdjsdjdhjshxcnjchhkcdhckdhkchdhkdhkchkdhckdhkchdkchkdhcdcguhkhcjhchihcihicheihiehiheiiehiehibcjbdjbvgftdtadgdacfshgasjhdkkdfhkdhkfhdkfhkdhfkdhfkhdkfhkdfkhdkfhkdfhkdhfhdkfhkdhfkdhfk dfhdkfkdfhk dfhdkfhdkhfkdhfkdhfkhdkfdjfjdfhdhfkdhfkhdkfhdkfhdkfdkfhdkfhdkfhkdfhkdfhkdfhkdfhdkfhdkhf jkjkjdjskdjksjdksjdksdsjggdjsdjdhjshxcnjchhkcdhckdhkchdhkdhkchkdhckdhkchdkchkdhcdcguhkhcjhchihcihicheihiehiheiiehiehibcjbdjbvgftdtadgdacfshgasjhdkkdfhkdhkfhdkfhkdhfkdhfkhdkfhkdfkhdkfhkdfhkdhfhdkfhkdhfkdhfk dfhdkfkdfhk dfhdkfhdkhfkdhfkdhfkhdkfdjfjdfhdhfkdhfkhdkfhdkfhdkfdkfhdkfhdkfhkdfhkdfhkdfhkdfhdkfhdkhf jkjkjdjskdjksjdksjdksdsjggdjsdjdhjshxcnjchhkcdhckdhkchdhkdhkchkdhckdhkchdkchkdhcdcguhkhcjhchihcihicheihiehiheiiehiehibcjbdjbvgftdtadgdacfshgasjhdkkdfhkdhkfhdkfhkdhfkdhfkhdkfhkdfkhdkfhkdfhkdhfhdkfhkdhfkdhfk dfhdkfkdfhk dfhdkfhdkhfkdhfkdhfkhdkfdjfjdfhdhfkdhfkhdkfhdkfhdkfdkfhdkfhdkfhkdfhkdfhkdfhkdfhdkfhdkhf</string>
    <string name="votre_panier">Votre panier</string>
    <string name="please_wait">Patientez&#8230;</string>
    <string name="politique_de_confidentialit_e"><u>Politique de confidentialité | </u></string>
    <string name="cgu">Cgu </string>
    <string name="_8_characters_1_capital_and_a_sign">8 characters,1 capital and a sign</string>
    <string name="login_register"><u>Connection</u></string>
    <string name="j_ai_plus_de_18_ans">J\'ai plus de 18 ANS</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="newletter">Abonnez-vous à notre Newletter</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="desc_spin">FAITES TOURNER LA ROUE POUR TENTER DE GAGNER DES BONBONS GRATUIT !</string>
    <string name="tap_on_the_yellow_button">Tentez votre chance !</string>
    <string name="best_selection">Meilleure sélection</string>
    <string name="nos_s_l_ctions_de_cbd">Nos séléctions de Friandises</string>
    <string name="politiquetxt">La politique de CandyShop est de  vendre ce que nous avons notre habitude  de consommer et nos clients veulent le meilleur.</string>
    <string name="promotxt">Nos promotions SUR CANDYSHOP</string>
    <string name="nouveautees_cbd">NOUVEAUTÉES SUR CANDYSHOP</string>
    <string name="spin_alert">Connectez vous pour avoir une chance de gagner !!!</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="login_button">Connection</string>
    <string-array name="planets_array">
        <item>France</item>
        <item>Angleterre</item>
        <item>Allemagne</item>
        <item>Espagne</item>

    </string-array>
    <string name="forgot_your_password">Oublie du mot de passe ?</string>
    <string name="cart_bottom">Panier</string>
    <string name="home_button">Accueil</string>
    <string name="enregistrez_btn">Enregistrez</string>
    <string name="login_side_menu">Connection </string>
    <string name="sign_up">" S'inscrire"</string>
    <string name="validez_cart">Valider</string>
    <string name="ajoutez_cart">Ajouter</string>
    <string name="effacer_cart">Effacer</string>
    <string name="votre_profil">VOTRE PROFIL</string>
    <string name="rue_profile">Rue:</string>
    <string name="ville_profile">Ville:</string>
    <string name="pays_profile">Pays:</string>
    <string name="change_your_expedition_adress">Changez votre adresse d\'expédition</string>
    <string name="votre_tel_profile">votre tel</string>
    <string name="submit_profile">Confirmer</string>
    <string name="vos_produits_favoris">Vos produits favoris</string>
    <string name="votre_profil_txt">votre profil</string>
    <string name="vos_adresses">vos adresses</string>
    <string name="text_btc_advice">Vous pouvez payez en bitcoin via la plateforme CoinPayment,par carte visa ,ou Paypal. aprés avoir reçu votre paiement nous procéderons à l\'envoie de votre commande.</string>
    <string name="prix_payer">\"Vous devez payez: \"</string>
    <string name="street_adre">Rue</string>
    <string name="touner_spin">Tournez...</string>
    <string name="pub_no_ready">l\'annonce de récompense n\'est pas prête</string>
    <string name="recompense_modal">\" VOUS AVEZ UN TOUR PRÊT\"</string>
    <string name="free_ride">Tours gratuits</string>
    <string name="prize">\"Le Prix est : \"</string>
    <string name="votre_cagnotte">votre cagnotte</string>
    <string name="btc_cours_txt">le cours du bitcoin est indisponible</string>
    <string name="epuiser">Epuisé</string>
    <string name="dispo_tour">Pas de tour disponible</string>
    <string name="notification_channel_description">notification pour avoir des points</string>
    <string name="spinPub">cliquez sur la notification</string>
    <string name="thank_you_for_your_purchase">Merci pour votre achat!!</string>
    <string name="prise_en_compte">Merci encore Cher(e)s Clients(es) vous allez recevoir un mail vous confirmant la prise en compte de votre commande.</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="nom_adress">Entrez votre nom</string>
    <string name="prenom_adress">Entrez votre prénom</string>
    <string name="code_postal_adress">code postal</string>
</resources>