<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/side_menu_navi">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/side_menu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pinkbuble"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:paddingStart="8dp"
                />


            <TextView
                android:id="@+id/close_btn_side_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/ic_close"
                android:textSize="20sp"
                android:textStyle="bold" />
            </LinearLayout>


            <ImageView
                android:id="@+id/open_uploader_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/lapinavatar" />

            <TextView
                android:id="@+id/email_tv_side_menu"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/bienvenue"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:background="@drawable/violetbg"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/pinkbuble"
                android:layout_marginTop="2dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/login_tv_side_menu"
                    android:layout_width="360dp"
                    android:layout_height="30dp"
                    android:layout_weight="2"
                    android:background="@drawable/violetbg"
                    android:padding="5dp"
                    android:text="@string/login_side_menu"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_up_tv_side_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:background="@drawable/rosebg"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/adresses"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/vos_adresses"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/rosebg"
                
                />
            <TextView
                android:id="@+id/profil_tv"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/votre_profil_txt"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/violetbg"

                />

            <TextView
                android:id="@+id/favori_tv_profile"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/vos_produits_favoris"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/rosebg"
                />

            <LinearLayout
                android:id="@+id/cagnotte_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingBottom="10dp"
                >
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/kitty_tv_main"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/piggy"
                />
                <TextView
                    android:id="@+id/euro_cagnotte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="euro"
                    android:textStyle="bold"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:background="@color/pinkbuble"
                    android:layout_weight="2"
                    />


            </LinearLayout>

            <ListView
                android:id="@+id/brandsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>





    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>