<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadeauxmas"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SpinActivity"
    android:gravity="center"
    tools:showIn="@layout/activity_spin">




<com.airbnb.lottie.LottieAnimationView
    android:id="@+id/winAnimation_lott"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone
"
    app:lottie_imageAssetsFolder="raw"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    android:translationZ="2dp"
    app:lottie_rawRes="@raw/starswinner"
    />




    <TextView
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="33dp"
        android:background="@color/color_primary_dark"
        android:text="@string/desc_spin"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold|normal" />

    <TextView
        android:id="@+id/pts_user"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="560dp"
        android:background="@drawable/bg_bot_red"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Points"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/convert_points"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/bg_black_round"
        android:gravity="center"
        android:text="euro"
        android:textColor="@color/white" />

    <ImageView
         android:id="@+id/imageHill"
         android:src="@mipmap/hill"
         android:layout_above="@+id/imageWheel"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imageWheel"
        android:src="@mipmap/wheel"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/powerButton"
        android:src="@mipmap/spin_button"
        android:layout_centerInParent="true"
        android:scaleType="center"
        android:adjustViewBounds="false"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:scaleType="center"
        android:src="@mipmap/circle" />
    <ImageView
        android:id="@+id/imagePointer"
        android:src="@mipmap/pointer"
        android:layout_above="@+id/imageWheel"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageCircle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/tap_on_the_yellow_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|normal" />

    <ImageView
        android:id="@+id/ad_btn_spin"
        android:layout_width="100dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="152dp"
        android:src="@drawable/pubvideo" />

    <TextView
        android:layout_width="395dp"
        android:layout_height="71dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="627dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/explication_spin"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tour_user"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bg_lime_spin"
        android:gravity="center"
        android:padding="10dp"
        android:text="1 SPIN"
        android:textColor="@color/white" />


</RelativeLayout>
